vbnc/vbnc/tests/Errors/30039-2.vb
Module bug
    Sub Main()
        Dim i As Object
        For i(0) = 1 To 2

        Next
    End Sub
End Module